--- a/dev/com.ibm.ws.ui.shared/resources/WEB-CONTENT/jsShared/search/SearchBox.html
+++ b/dev/com.ibm.ws.ui.shared/resources/WEB-CONTENT/jsShared/search/SearchBox.html
@@ -1,5 +1,14 @@
 <div data-dojo-type="dijit/layout/ContentPane" class="searchBox" data-dojo-attach-event="" id="search-box">
-
+<!--
+    Copyright (c) 2016 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
    <div data-dojo-type="dijit/layout/ContentPane" id="search-searchPill-pane" class="searchPillPane"
    		data-dojo-attach-point="searchPillPane"  
    		data-dojo-attach-event="">
