--- a/dev/com.ibm.ws.ui.shared/resources/WEB-CONTENT/jsShared/search/SearchPill.html
+++ b/dev/com.ibm.ws.ui.shared/resources/WEB-CONTENT/jsShared/search/SearchPill.html
@@ -1,3 +1,13 @@
+<!--
+    Copyright (c) 2016 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
 <div class="searchPill searchPillNotSelected"  tabindex="0" 
 	 data-dojo-attach-event="click:showPillAsSelected,focus:showPillAsSelected,blur:showPillAsNotSelected,keypress:checkKeyCode">
 	 <!-- look into 'containerNode' in templates again --> 
